# srt-single-dish-tools

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  planning.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_conda_linux.sh  setup_conda_osx.sh  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml
TEST_DATASET/: test_calib.ini  test_calib_roach.ini  test_config.ini  test_config_w44.ini
TEST_DATASET/20140603-091116-scicom-3C157/: 20140603-091116-scicom-3C157_002_003.fits  20140603-091148-scicom-3C157_002_004.fits  20140603-091221-scicom-3C157_002_005.fits  20140603-091253-scicom-3C157_002_006.fits  20140603-091325-scicom-3C157_002_007.fits  20140603-091357-scicom-3C157_002_008.fits  20140603-091429-scicom-3C157_002_009.fits  20140603-091501-scicom-3C157_002_010.fits  20140603-091534-scicom-3C157_002_011.fits  20140603-091606-scicom-3C157_002_012.fits  20140603-091638-scicom-3C157_002_013.fits  20140603-091710-scicom-3C157_002_014.fits  20140603-091743-scicom-3C157_002_015.fits  20140603-091815-scicom-3C157_002_016.fits  20140603-091847-scicom-3C157_002_017.fits  20140603-091919-scicom-3C157_002_018.fits  20140603-091951-scicom-3C157_002_019.fits  20140603-092023-scicom-3C157_002_020.fits  20140603-092055-scicom-3C157_002_021.fits  20140603-092128-scicom-3C157_002_022.fits  20140603-092200-scicom-3C157_002_023.fits  20140603-092232-scicom-3C157_002_024.fits  20140603-092304-scicom-3C157_002_025.fits  20140603-092337-scicom-3C157_002_026.fits  20140603-092409-scicom-3C157_002_027.fits  20140603-092441-scicom-3C157_002_028.fits  20140603-092513-scicom-3C157_002_029.fits  20140603-092545-scicom-3C157_002_030.fits  20140603-092617-scicom-3C157_002_031.fits  20140603-092650-scicom-3C157_002_032.fits  20140603-092722-scicom-3C157_002_033.fits  20140603-092754-scicom-3C157_002_034.fits  20140603-092826-scicom-3C157_002_035.fits  20140603-092858-scicom-3C157_002_036.fits  20140603-092931-scicom-3C157_002_037.fits  20140603-093003-scicom-3C157_002_038.fits  20140603-093035-scicom-3C157_002_039.fits  20140603-093107-scicom-3C157_002_040.fits  20140603-093139-scicom-3C157_002_041.fits  20140603-093211-scicom-3C157_002_042.fits  (+111 more)
TEST_DATASET/20140603-103246-scicom-3C157/: 20140603-103246-scicom-3C157_003_003.fits  20140603-103318-scicom-3C157_003_004.fits  20140603-103350-scicom-3C157_003_005.fits  20140603-103423-scicom-3C157_003_006.fits  20140603-103455-scicom-3C157_003_007.fits  20140603-103527-scicom-3C157_003_008.fits  20140603-103559-scicom-3C157_003_009.fits  20140603-103632-scicom-3C157_003_010.fits  20140603-103704-scicom-3C157_003_011.fits  20140603-103736-scicom-3C157_003_012.fits  20140603-103808-scicom-3C157_003_013.fits  20140603-103841-scicom-3C157_003_014.fits  20140603-103912-scicom-3C157_003_015.fits  20140603-103945-scicom-3C157_003_016.fits  20140603-104017-scicom-3C157_003_017.fits  20140603-104050-scicom-3C157_003_018.fits  20140603-104122-scicom-3C157_003_019.fits  20140603-104154-scicom-3C157_003_020.fits  20140603-104226-scicom-3C157_003_021.fits  20140603-104258-scicom-3C157_003_022.fits  20140603-104330-scicom-3C157_003_023.fits  20140603-104402-scicom-3C157_003_024.fits  20140603-104434-scicom-3C157_003_025.fits  20140603-104507-scicom-3C157_003_026.fits  20140603-104539-scicom-3C157_003_027.fits  20140603-104611-scicom-3C157_003_028.fits  20140603-104643-scicom-3C157_003_029.fits  20140603-104715-scicom-3C157_003_030.fits  20140603-104747-scicom-3C157_003_031.fits  20140603-104819-scicom-3C157_003_032.fits  20140603-104852-scicom-3C157_003_033.fits  20140603-104924-scicom-3C157_003_034.fits  20140603-104956-scicom-3C157_003_035.fits  20140603-105028-scicom-3C157_003_036.fits  20140603-105100-scicom-3C157_003_037.fits  20140603-105132-scicom-3C157_003_038.fits  20140603-105205-scicom-3C157_003_039.fits  20140603-105237-scicom-3C157_003_040.fits  20140603-105309-scicom-3C157_003_041.fits  20140603-105341-scicom-3C157_003_042.fits  (+111 more)
data/calibrators/: parse_tex_table.py
docs/: conf.py  index.rst  requirements.txt
docs/changes/: 235.feature.rst  236.trivial.rst  246.bugfix.rst  247.feature.rst  248.feature.rst  252.feature.rst  256.feature.rst  259.trivial.rst  264.trivial.rst  265.bugfix.rst  266.feature.rst  268.bugfix.rst  270.trivial.rst  271.feature.rst  273.trivial.rst  274.feature.rst  276.bugfix.rst
docs/scripts/: cli.rst
docs/srttools/: modules.rst
docs/tutorials/: converters.rst  imaging.rst  rfi.rst
notebooks/: Introduction to the SRT Single Dish Tools.ipynb  Offset correction algorithms after baseline subtraction.ipynb
srttools/: __init__.py  calibration.py  conftest.py  convert.py  destripe.py  fit.py  global_fit.py  histograms.py  imager.py  inspect_observations.py  interactive_filter.py  io.py  monitor.py  opacity.py  parse_acs_logs.py  read_config.py  rfistat.py  scan.py  simulate.py  utils.py  version.py
srttools/converters/: classfits.py  mbfits.py  sdfits.py
srttools/core/: Flux measurements.ipynb  __init__.py  _astropy_init.py  calibration.py  fit.py  global_fit.py  histograms.py  imager.py  inspect_observations.py  interactive_filter.py  io.py  lc_calibration.py  read_config.py  scan.py  simulate.py  test_interactive_filter.py  test_scan.py  utils.py  webint.py
srttools/data/: generate_calibration.py  scan_template.fits
srttools/experiments/: align_feed_imgs.py  try.fits  try_2.fits
srttools/monitor/: .webserver.py.swp  __init__.py  common.py  conftest.py  monitor.py  webserver.py
srttools/tests/: __init__.py  coveragerc  test_calibration.py  test_convert.py  test_destripe.py  test_fit.py  test_histograms.py  test_imager.py  test_import.py  test_inspect_observations.py  test_monitor.py  (+7 more)
(+221 files in other folders)
