[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = srttools
description = SRT Single-Dish Tools
long_description = Suite of programs for quicklook analysis of SRT data
author = Matteo Bachetti and the SRT Imaging team
author_email = bachetti@oa-cagliari.inaf.it
license = BSD
url = http://srt.inaf.it
edit_on_github = False
github_project = astropy/astropy

[entry_points]
SDTimage = srttools.core.imager:main_imager
SDTlcurve = srttools.core.calibration:main_lc_calibrator
