[metadata]
name = srttools
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.6.dev
author = Matteo Bachetti and the Discos Team
author_email = matteo.bachetti@inaf.it
description = Tools for the analysis and conversion of SRT data
long_description = The Sardinia Radio Telescope Single Dish Tools (SDT) are a set of Python tools designed for the quicklook and analysis of single-dish radio data, starting from the backends present at the Sardinia Radio Telescope.
license = BSD 3-Clause
url = https://srt-single-dish-tools.readthedocs.io
edit_on_github = True
github_project = discos/srt-single-dish-tools
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
install_requires = astropy; scipy; matplotlib; numpy
;install_requires = astropy
zip_safe = False
use_2to3 = False
include_package_data = True

[options.entry_points]
console_scripts =
    SDTcal = srttools.calibration:main_cal
    SDTfake = srttools.simulate:main_simulate
    SDTimage = srttools.imager:main_imager
    SDTinspect = srttools.inspect_observations:main_inspector
    SDTlcurve = srttools.calibration:main_lcurve
    SDTpreprocess = srttools.imager:main_preprocess
    SDTopacity = srttools.opacity:main_opacity
    SDTmonitor = srttools.monitor:main_monitor
    SDTconvert = srttools.convert:main_convert
    SDTbulkchange = srttools.io:main_bulk_change
    SDTparselog = srttools.parse_acs_logs:main_parse_acs_logs


[options.package_data]
srttools = data/*, tests/data/*.fits*, tests/data/*/*.fits*, tests/data/*.ini, tests/data/*/*.ini
srttools.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
